--- a/uib-layout-break-out-the-flow-neao002/style.css
+++ b/uib-layout-break-out-the-flow-neao002/style.css
@@ -9,10 +9,13 @@ html, body {
   height: 200px;
   position: absolute;
   top: 0%;
-  left: 50%;
+  left: 45%;
+  text-align: center;
+  line-height: 5px;
 
   background-color: orange;
   border: 1px solid black;
+  margin: 10px;
   
     
     
